update DB url to clever-cloud

--- a/server/TodoApi/appsettings.json
+++ b/server/TodoApi/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ToDoDB":"server=localhost;database=todo;user=root;password=1234"
+  "ToDoDB":"server=bkagedqvom4mbgosjrsx-mysql.services.clever-cloud.com;database=bkagedqvom4mbgosjrsx;user=ua0kdhbwm4ydsgaz;password=ua0kdhbwm4ydsgaz"
+
   
 }
